# sig_graph_erpnext

./: .env  .env-distributor  .env-producer  .env-retailer  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.local.yaml  docker-compose.prod.yaml  docker-compose.yaml  launch.sh  new-site.sh  pull-docker.sh  push-docker.sh  pyproject.toml  tag-docker.sh
.github/workflows/: ci.yml
demo/: .env-distributor  .env-distributor-local  .env-producer  .env-producer-local  .env-retailer  .env-retailer-local  nginx.conf  run-demo.sh  run-distributor.sh  run-producer.sh  run-retailer.sh  setup-demo.sh
docker-sites/: apps.json  assets  common_site_config.json
erpnext/: Procfile
erpnext/config/: nginx.conf  redis_cache.conf  redis_queue.conf
erpnext/sites/: apps.json  common_site_config.json
erpnext/sites/assets/: assets-rtl.json  assets.json  erpnext  frappe
erpnext/sites/assets/locale/eo/LC_MESSAGES/: erpnext.mo
erpnext/sites/assets/locale/sv/LC_MESSAGES/: erpnext.mo
erpnext/sites/localhost/: site_config.json  touched_tables.json
siggraph_integration/: hooks.py  modules.txt
